force-app/main/default/objects/cdcpc__PartPriceBreakLevel__c/cdcpc__PartPriceBreakLevel__c.object-meta.xml
<CustomObject>
    <label>Part Price Break Level</label>
    <nameField>
        <displayFormat>PartPBL-{0000}</displayFormat>
        <label>Part Price Break Level</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Price Break Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>