force-app/main/default/objects/cdcpc__PartPriceBreakLevel__c/fields/cdcpc__ConfiguredPart__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ConfiguredPart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configured Part</label>
    <referenceTo>cdcpc__ConfiguredPart__c</referenceTo>
    <relationshipLabel>Part Price Break Levels</relationshipLabel>
    <relationshipName>PartPriceBreakLevels</relationshipName>
    <type>Lookup</type>
</CustomField>