force-app/main/default/objects/cdcpc__PartPriceBreakLevel__c/fields/cdcpc__DiscountableLotCharge__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__DiscountableLotCharge__c</fullName>
    <label>Discountable Lot Charge</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>