force-app/main/default/objects/cdcpc__PartPriceBreakLevel__c/fields/cdcpc__NonDiscountableTestLotCharge__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__NonDiscountableTestLotCharge__c</fullName>
    <label>Non-Discountable Test Lot Charge</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>