force-app/main/default/objects/cdcpc__PartPriceBreakLevel__c/fields/cdcpc__PartNumber__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PartNumber__c</fullName>
    <formula>cdcpc__ConfiguredPart__r.cdcpc__PartNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>