force-app/main/default/objects/cdcpc__PartPriceBreakLevel__c/fields/cdcpc__ProductId__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__ProductId__c</fullName>
    <formula>cdcpc__ConfiguredPart__r.cdcpc__Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductId</label>
    <type>Text</type>
</CustomField>