force-app/main/default/objects/cdcpc__PartPriceBreakLevel__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>NAME</columns>
    <columns>cdcpc__ConfiguredPart__c</columns>
    <columns>cdcpc__QuantityLowerLimit__c</columns>
    <columns>cdcpc__QuantityUpperLimit__c</columns>
    <columns>cdcpc__UnitPrice__c</columns>
    <columns>cdcpc__DiscountableLotCharge__c</columns>
    <columns>cdcpc__DiscountableTestLotPrice__c</columns>
    <columns>cdcpc__NonDiscountableLotCharge__c</columns>
    <columns>cdcpc__NonDiscountableTestLotCharge__c</columns>
    <columns>cdcpc__NonDiscountableLotChargeAdder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>